log
sá.,  3 de may. de 2025 20:18:07: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++----
 1 file changed, 38 insertions(+), 4 deletions(-)
 tests:  1|8
total_score: 0/70
5729e4d
do.,  4 de may. de 2025 11:34:14: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
8778cb1
do.,  4 de may. de 2025 12:11:13: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|6
total_score: 15/70
6d39d28
do.,  4 de may. de 2025 12:33:33: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|0
bbbee15
do.,  4 de may. de 2025 12:45:27: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  0|0
35709ff
do.,  4 de may. de 2025 12:47:50: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
7591da6
do.,  4 de may. de 2025 12:57:20: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
95b9feb
do.,  4 de may. de 2025 13:19:56: 
 treemap.c | 48 +++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 39 insertions(+), 9 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:83:15: error: statement with no effect [-Werror=unused-value]
     n->parent >= padre;
     ~~~~~~~~~~^~~~~~~~
treemap.c: In function 'removeNode':
treemap.c:153:26: error: implicit declaration of function 'minimun' [-Werror=implicit-function-declaration]
         TreeNode * min = minimun(node->right);
                          ^~~~~~~
treemap.c:153:26: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
f5399f0
